# overtime-reporter

./: .gitignore  GEMINI.md  README.md  skogstorp_pay_rates.csv  sweden_public_holidays_2026_2040.csv
.github/workflows/: deploy.yml
wasm-crate/: Cargo.toml
wasm-crate/src/: lib.rs
www/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
www/src/: App.tsx  report.typ  typst-pdf.ts
www/src/pkg/: holidays.json  package.json  rates.json
