[package]
name = "wasm-crate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde_json = "1.0.149"
chrono = "0.4.44"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.7"

[profile.release]
# Optimize for small WASM size
opt-level = "z"
lto = true
